--- a/code_editor/python_code_editor.html
+++ b/code_editor/python_code_editor.html
@@ -9,39 +9,39 @@
 		integrity="sha512-IgmDkwzs96t4SrChW29No3NXBIBv8baW490zk5aXvhCD8vuZM3yUSkbyTBcXohkySecyzIrUwiF/qV0cuPcL3Q==" 
 		crossorigin="anonymous" referrerpolicy="no-referrer" />  
 
-<script type="text/javascript" src="/src/brython_builtins.js"></script>
-<script type="text/javascript" src="/src/version_info.js"></script>
-<script type="text/javascript" src="/src/python_tokenizer.js"></script>
-<script type="text/javascript" src="/src/py_ast.js"></script>
-<script type="text/javascript" src="/src/py2js.js"></script>
-<script type="text/javascript" src="/src/loaders.js"></script>
-<script type="text/javascript" src="/src/py_object.js"></script>
-<script type="text/javascript" src="/src/py_type.js"></script>
-<script type="text/javascript" src="/src/py_utils.js"></script>
-<script type="text/javascript" src="/src/py_sort.js"></script>
-<script type="text/javascript" src="/src/py_builtin_functions.js"></script>
-<script type="text/javascript" src="/src/py_exceptions.js"></script>
-<script type="text/javascript" src="/src/py_range_slice.js"></script>
-<script type="text/javascript" src="/src/py_bytes.js"></script>
-<script type="text/javascript" src="/src/py_set.js"></script>
-<script type="text/javascript" src="/src/js_objects.js"></script>
-<script type="text/javascript" src="/src/stdlib_paths.js"></script>
-<script type="text/javascript" src="/src/py_import.js"></script>
-<script type="text/javascript" src="/src/unicode_data.js"></script>
-<script type="text/javascript" src="/src/py_string.js"></script>
-<script type="text/javascript" src="/src/py_int.js"></script>
-<script type="text/javascript" src="/src/py_long_int.js"></script>
-<script type="text/javascript" src="/src/py_float.js"></script>
-<script type="text/javascript" src="/src/py_complex.js"></script>
-<script type="text/javascript" src="/src/py_dict.js"></script>
-<script type="text/javascript" src="/src/py_list.js"></script>
-<script type="text/javascript" src="/src/py_generator.js"></script>
-<script type="text/javascript" src="/src/py_dom.js"></script>
-<script type="text/javascript" src="/src/py_pattern_matching.js"></script>
-<script type="text/javascript" src="/src/builtin_modules.js"></script>
-<script type="text/javascript" src="/src/async.js"></script>
-<script type="text/javascript" src="/src/ast_to_js.js"></script>
-<script type="text/javascript" src="/src/symtable.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/brython_builtins.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/version_info.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/python_tokenizer.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/py_ast.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/py2js.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/loaders.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/py_object.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/py_type.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/py_utils.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/py_sort.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/py_builtin_functions.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/py_exceptions.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/py_range_slice.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/py_bytes.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/py_set.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/js_objects.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/stdlib_paths.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/py_import.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/unicode_data.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/py_string.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/py_int.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/py_long_int.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/py_float.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/py_complex.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/py_dict.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/py_list.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/py_generator.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/py_dom.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/py_pattern_matching.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/builtin_modules.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/async.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/ast_to_js.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/symtable.js"></script>
 
 <!-- script type="text/javascript" src="../src/brython_stdlib.js"></script -->
 <script src="/assets/header.brython.js"></script>
