--- a/code_editor/python_code_editor.html
+++ b/code_editor/python_code_editor.html
@@ -44,11 +44,7 @@
 <script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/symtable.js"></script>
 
 <!-- script type="text/javascript" src="../src/brython_stdlib.js"></script -->
-<script src="/assets/header.brython.js"></script>
-
-<!-- sqlite -->
-
-
+<script src="https://raw.githubusercontent.com/brython-dev/brython/master/www/assets/header.brython.js"></script>
  
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.9.6/ace.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.9.6/ext-language_tools.min.js"></script>
