--- a/code_editor/python_code_editor.html
+++ b/code_editor/python_code_editor.html
@@ -9,12 +9,12 @@
 		integrity="sha512-IgmDkwzs96t4SrChW29No3NXBIBv8baW490zk5aXvhCD8vuZM3yUSkbyTBcXohkySecyzIrUwiF/qV0cuPcL3Q==" 
 		crossorigin="anonymous" referrerpolicy="no-referrer" />  
 
-<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/brython_builtins.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/version_info.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/python_tokenizer.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/py_ast.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/py2js.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/loaders.js"></script>
+<script type="text/javascript" src="https://raw.githack.com/brython-dev/brython/master/www/src/brython_builtins.js"></script>
+<script type="text/javascript" src="https://raw.githack.com/brython-dev/brython/master/www/src/version_info.js"></script>
+<script type="text/javascript" src="https://raw.githack.com/brython-dev/brython/master/www/src/python_tokenizer.js"></script>
+<script type="text/javascript" src="https://raw.githack.com/brython-dev/brython/master/www/src/py_ast.js"></script>
+<script type="text/javascript" src="https://raw.githack.com/brython-dev/brython/master/www/src/py2js.js"></script>
+<script type="text/javascript" src="https://raw.githack.com/brython-dev/brython/master/www/src/loaders.js"></script>
 <script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/py_object.js"></script>
 <script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/py_type.js"></script>
 <script type="text/javascript" src="https://raw.githubusercontent.com/brython-dev/brython/master/www/src/py_utils.js"></script>
