--- a/code_editor/python_code_editor.html
+++ b/code_editor/python_code_editor.html
@@ -46,7 +46,7 @@
 
 
 <!-- script type="text/javascript" src="../src/brython_stdlib.js"></script -->
-<script src="https://raw.githubusercontent.com/brython-dev/brython/master/www/assets/header.brython.js"></script>
+<script src="https://raw.githack.com/brython-dev/brython/master/www/assets/header.brython.js"></script>
  
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.9.6/ace.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.9.6/ext-language_tools.min.js"></script>
