--- a/code_editor/python_code_editor.html
+++ b/code_editor/python_code_editor.html
@@ -9,7 +9,7 @@
 		integrity="sha512-IgmDkwzs96t4SrChW29No3NXBIBv8baW490zk5aXvhCD8vuZM3yUSkbyTBcXohkySecyzIrUwiF/qV0cuPcL3Q==" 
 		crossorigin="anonymous" referrerpolicy="no-referrer" />  
 
-<script type="text/javascript" src="https://raw.githack.com/brython-dev/brython/master/www/src/brython_builtins.js"></script>
+<script type="text/javascript" src="https://rawcdn.githack.com/ss-ebooks/ss-ebooks.github.io/9fe7bee4f08465d279d2907256c9a93c092e39ab/src/brython_builtins.js"></script>
 <script type="text/javascript" src="https://raw.githack.com/brython-dev/brython/master/www/src/version_info.js"></script>
 <script type="text/javascript" src="https://raw.githack.com/brython-dev/brython/master/www/src/python_tokenizer.js"></script>
 <script type="text/javascript" src="https://raw.githack.com/brython-dev/brython/master/www/src/py_ast.js"></script>
