--- a/code_editor/python_code_editor.html
+++ b/code_editor/python_code_editor.html
@@ -16,7 +16,7 @@
 <script type="text/javascript" src="https://raw.githack.com/brython-dev/brython/master/www/src/py2js.js"></script>
 <script type="text/javascript" src="https://raw.githack.com/brython-dev/brython/master/www/src/loaders.js"></script>
 <script type="text/javascript" src="https://raw.githack.com/brython-dev/brython/master/www/src/py_object.js"></script>
-<script type="text/javascript" src="https://raw.githack.com/brython-dev/brython/master/www/src/py_type.js"></script>
+<script type="text/javascript" src="https://rawcdn.githack.com/ss-ebooks/ss-ebooks.github.io/b23f0060345d898641e5ac225023276129863cce/src/py_type.js"></script>
 <script type="text/javascript" src="https://raw.githack.com/brython-dev/brython/master/www/src/py_utils.js"></script>
 <script type="text/javascript" src="https://raw.githack.com/brython-dev/brython/master/www/src/py_sort.js"></script>
 <script type="text/javascript" src="https://raw.githack.com/brython-dev/brython/master/www/src/py_builtin_functions.js"></script>
