--- a/code_editor/python_code_editor.html
+++ b/code_editor/python_code_editor.html
@@ -19,7 +19,7 @@
 <script type="text/javascript" src="https://rawcdn.githack.com/ss-ebooks/ss-ebooks.github.io/b23f0060345d898641e5ac225023276129863cce/src/py_type.js"></script>
 <script type="text/javascript" src="https://raw.githack.com/brython-dev/brython/master/www/src/py_utils.js"></script>
 <script type="text/javascript" src="https://raw.githack.com/brython-dev/brython/master/www/src/py_sort.js"></script>
-<script type="text/javascript" src="https://raw.githack.com/brython-dev/brython/master/www/src/py_builtin_functions.js"></script>
+<script type="text/javascript" src="https://raw.githack.com/ss-ebooks/ss-ebooks.github.io/main/src/py_builtin_functions.js"></script>
 <script type="text/javascript" src="https://raw.githack.com/brython-dev/brython/master/www/src/py_exceptions.js"></script>
 <script type="text/javascript" src="https://raw.githack.com/brython-dev/brython/master/www/src/py_range_slice.js"></script>
 <script type="text/javascript" src="https://raw.githack.com/brython-dev/brython/master/www/src/py_bytes.js"></script>
