--- a/code_editor/python_code_editor.html
+++ b/code_editor/python_code_editor.html
@@ -9,43 +9,39 @@
 		integrity="sha512-IgmDkwzs96t4SrChW29No3NXBIBv8baW490zk5aXvhCD8vuZM3yUSkbyTBcXohkySecyzIrUwiF/qV0cuPcL3Q==" 
 		crossorigin="anonymous" referrerpolicy="no-referrer" />  
 
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/brython_builtins.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/version_info.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/python_tokenizer.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_ast.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py2js.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/loaders.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_object.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_type.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_utils.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_sort.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_builtin_functions.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_exceptions.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_range_slice.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_bytes.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_set.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/js_objects.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/stdlib_paths.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_import.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/unicode_data.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_string.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_int.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_long_int.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_float.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_complex.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_dict.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_list.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_generator.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_dom.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_pattern_matching.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/builtin_modules.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/async.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/ast_to_js.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/symtable.js"></script>
-
-
-
-<!-- script type="text/javascript" src="../src/brython_stdlib.js"></script -->
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/brython_builtins.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/version_info.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/python_tokenizer.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_ast.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py2js.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/loaders.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_object.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_type.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_utils.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_sort.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_builtin_functions.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_exceptions.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_range_slice.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_bytes.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_set.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/js_objects.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/stdlib_paths.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_import.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/unicode_data.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_string.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_int.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_long_int.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_float.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_complex.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_dict.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_list.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_generator.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_dom.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_pattern_matching.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/builtin_modules.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/async.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/ast_to_js.js"></script>
+<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/symtable.js"></script>
 <script src="https://raw.githack.com/brython-dev/brython/master/www/assets/header.brython.js"></script>
  
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.9.6/ace.min.js"></script>
