--- a/code_editor/python_code_editor.html
+++ b/code_editor/python_code_editor.html
@@ -9,8 +9,8 @@
 		integrity="sha512-IgmDkwzs96t4SrChW29No3NXBIBv8baW490zk5aXvhCD8vuZM3yUSkbyTBcXohkySecyzIrUwiF/qV0cuPcL3Q==" 
 		crossorigin="anonymous" referrerpolicy="no-referrer" />  
 
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/brython_builtins.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/version_info.js"></script>
+<script  src="/src/brython_builtins.js"></script>
+<script  src="/src/version_info.js"></script>
 <script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/python_tokenizer.js"></script>
 <script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_ast.js"></script>
 <script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py2js.js"></script>
