--- a/code_editor/python_code_editor.html
+++ b/code_editor/python_code_editor.html
@@ -11,15 +11,15 @@
 
 <script  src="/src/brython_builtins.js"></script>
 <script  src="/src/version_info.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/python_tokenizer.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_ast.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py2js.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/loaders.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_object.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_type.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_utils.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_sort.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_builtin_functions.js"></script>
+<script  src="/src/python_tokenizer.js"></script>
+<script  src="/src/py_ast.js"></script>
+<script  src="/src/py2js.js"></script>
+<script  src="/src/loaders.js"></script>
+<script  src="/src/py_object.js"></script>
+<script  src="/src/py_type.js"></script>
+<script  src="/src/py_utils.js"></script>
+<script  src="/src/py_sort.js"></script>
+<script  src="/src/py_builtin_functions.js"></script>
 <script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_exceptions.js"></script>
 <script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_range_slice.js"></script>
 <script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_bytes.js"></script>
