--- a/code_editor/python_code_editor.html
+++ b/code_editor/python_code_editor.html
@@ -20,29 +20,29 @@
 <script  src="/src/py_utils.js"></script>
 <script  src="/src/py_sort.js"></script>
 <script  src="/src/py_builtin_functions.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_exceptions.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_range_slice.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_bytes.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_set.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/js_objects.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/stdlib_paths.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_import.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/unicode_data.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_string.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_int.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_long_int.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_float.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_complex.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_dict.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_list.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_generator.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_dom.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/py_pattern_matching.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/builtin_modules.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/async.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/ast_to_js.js"></script>
-<script  src="https://raw.githubusercontent.com/ss-ebooks/ss-ebooks.github.io/main/src/symtable.js"></script>
-<script src="https://raw.githack.com/brython-dev/brython/master/www/assets/header.brython.js"></script>
+<script  src="/src/py_exceptions.js"></script>
+<script  src="/src/py_range_slice.js"></script>
+<script  src="/src/py_bytes.js"></script>
+<script  src="/src/py_set.js"></script>
+<script  src="/src/js_objects.js"></script>
+<script  src="/src/stdlib_paths.js"></script>
+<script  src="/src/py_import.js"></script>
+<script  src="/src/unicode_data.js"></script>
+<script  src="/src/py_string.js"></script>
+<script  src="/src/py_int.js"></script>
+<script  src="/src/py_long_int.js"></script>
+<script  src="/src/py_float.js"></script>
+<script  src="/src/py_complex.js"></script>
+<script  src="/src/py_dict.js"></script>
+<script  src="/src/py_list.js"></script>
+<script  src="/src/py_generator.js"></script>
+<script  src="/src/py_dom.js"></script>
+<script  src="/src/py_pattern_matching.js"></script>
+<script  src="/src/builtin_modules.js"></script>
+<script  src="/src/async.js"></script>
+<script  src="/src/ast_to_js.js"></script>
+<script  src="/src/symtable.js"></script>
+<script src="/assets/header.brython.js"></script>
  
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.9.6/ace.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.9.6/ext-language_tools.min.js"></script>
