--- a/code_editor/python_code_editor.html
+++ b/code_editor/python_code_editor.html
@@ -41,7 +41,8 @@
 <script  src="/src/builtin_modules.js"></script>
 <script  src="/src/async.js"></script>
 <script  src="/src/ast_to_js.js"></script>
-<script  src="/src/symtable.js"></script>
+<script src="/src/symtable.js"></script>
+<script src="/src/brython_stdlib.js"></script>	
 <script src="/assets/header.brython.js"></script>
  
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.9.6/ace.min.js"></script>
