--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 	  body {
 		background: linear-gradient(60deg,#F0EABE 50%,#21E1E1 50%);
 	}*/
+body {
+  background-color: lch(93% 44 255);
+}	  
   .shadow {
 	  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
