--- a/compiler/index.html
+++ b/compiler/index.html
@@ -12,6 +12,15 @@
 </head>
 
 <body>
+	<!-- Hero -->
+      <section class="hero is-light">
+        <div class="hero-body">
+          <p class="title is-1  has-text-centered">
+            Program Editor and Compiler for C language
+          </p>          
+        </div>
+      </section>
+      <!-- /Hero -->  
 	<div class="container is-fluid ">
 		<iframe style='max-width:100%; border: none; height: 600px; width: 100%;' 
 			height=600 width="100%" 
