--- a/compiler/index.html
+++ b/compiler/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>
-		C Editor and Compiler
+		Program Editor and Compiler for C language
 	</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css" 
 		integrity="sha512-IgmDkwzs96t4SrChW29No3NXBIBv8baW490zk5aXvhCD8vuZM3yUSkbyTBcXohkySecyzIrUwiF/qV0cuPcL3Q==" 
@@ -13,7 +13,7 @@
 
 <body>
 	<!-- Hero -->
-      <section class="hero is-light">
+      <section class="hero is-light is-small">
         <div class="hero-body">
           <p class="title is-1  has-text-centered">
             Program Editor and Compiler for C language
@@ -22,6 +22,7 @@
       </section>
       <!-- /Hero -->  
 	<div class="container is-fluid ">
+		<br/>
 		<iframe style='max-width:100%; border: none; height: 600px; width: 100%;' 
 			height=600 width="100%" 
 			src="https://www.interviewbit.com/embed/snippet/60342fa678e88236679e" 
