--- a/c_language_1/index.html
+++ b/c_language_1/index.html
@@ -38,14 +38,7 @@
 				 <b class="title is-3">Contents</b>
 				<div class="list">	
 					<ul>
-						<li class="list-item "><a  href="./basic_syntax.html" ><font color="#fff">Basic Syntax</font></a></li>
-						<li class="list-item"><a  href="./datatype.html" ><font color="#fff">Variable และ Data types</font></a></li>
-						<li class="list-item"><a  href="./operands_operators.html" ><font color="#fff">Operands and Operators</font></a></li>
-						<li class="list-item"><a  href="./function.html" ><font color="#fff">Functions</a></font></li>
-						<li class="list-item"><a  href="./branching.html" ><font color="#fff">Branching and Decision control</a></font></li>
-						<li class="list-item"><a  href="./iteration.html" ><font color="#fff">Iteration</a></font></li>
-						<li class="list-item"><a  href="./read_write_data.html" ><font color="#fff">Reading and writing data  </a></font></li>
-						<li class="list-item"><a  href="./writing_a_program.html" ><font color="#fff">Writing a program  </a></font></li>
+						<li class="list-item "><a  href="./chapter1.html" ><font color="#fff">รู้จักกับ C programming language</font></a></li>
 					</ul>			
 				</div>
 				<br/>
