--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@ body {
 						</div><!-- /a book -->       
 						<!-- ############################# --> 
 						<div class="column "><!-- a book -->
-							<!-- being python man # 2 -->
+							<!-- C for Beginners -->
 							<div class="card shadow book-cover">
 								<div class="card-image ">
 									<figure class="image">
-										<a href="./beingpythonman_2/">											
-											<img src="./icons/python_cover_2022-07-12_02.png"/>
+										<a href="/c_language_1/">											
+											<img src="https://images-assets.nasa.gov/image/carina_nebula/carina_nebula~medium.jpg"/>
 										</a>
 									</figure>              
 								</div>
