--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@ body {
 										<a href="/c_language_1/">											
 											<img src="https://images-assets.nasa.gov/image/carina_nebula/carina_nebula~medium.jpg"/>
 										</a>
-									</figure>              
+									</figure>  
+									<div style="position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);">C for Beginners</div>
 								</div>
 							<!-- text is here -->
 							</div> <!-- /card -->                   
