--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ body {
 							<!-- C for Beginners -->
 							<div class="card shadow book-cover">
 								<div class="card-image ">
-									<figure class="image">
+									<figure class="image is-128x128">
 										<a href="/c_language_1/">											
 											<img src="https://images-assets.nasa.gov/image/carina_nebula/carina_nebula~medium.jpg"/>
 										</a>
