--- a/index.html
+++ b/index.html
@@ -68,11 +68,10 @@ body {
 											<img src="https://images-assets.nasa.gov/image/carina_nebula/carina_nebula~medium.jpg"/>
 										</a>
 									</figure>  
-									<div style="position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);">C for Beginners</div>
 								</div>
+								<div class="card-content is-overlay">
+     								   <span class="tag is-primary">C for Beginners</span>
+                                                                </div>
 							<!-- text is here -->
 							</div> <!-- /card -->                   
 						</div><!-- /a book -->       
