--- a/index.html
+++ b/index.html
@@ -49,12 +49,15 @@ body {
 							<!-- being python man # 1 -->
 							<div class="card shadow book-cover">
 								<div class="card-image">
-									<figure class="image">
+									<figure class="image is5by4">
 										<a href="./beingpythonman_1/">
-											<img src="./icons/cover_2022-07-12-01.png"/>
+											<img src="/icons/python_man_2.webp"/>
 										</a>
 									</figure>              
 								</div>
+								<div class="card-content is-overlay">
+     								   <span class="title is-1 has-text-white">Being Python Mane #1</span>
+                                                                </div>
 							<!-- text is here -->
 							</div> <!-- /card -->                   
 						</div><!-- /a book -->       
