--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ body {
 							<div class="card shadow book-cover">
 								<div class="card-image ">
 									<figure class="image is-5by4">
-										<a href="/c_language_1/">											
+										<a href="./c_language_1/">											
 											<img src="https://images-assets.nasa.gov/image/carina_nebula/carina_nebula~medium.jpg"/>
 										</a>
 									</figure>  
