--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@ body {
 						<div class="column"><!-- a book -->
 							<!-- being python man # 1 -->
 							<div class="card shadow book-cover">
+								<a href="./beingpythonman_1/">
 								<div class="card-image">
-									<figure class="image is5by4">
-										<a href="./beingpythonman_1/">
-											<img src="/icons/python_man_2.webp"/>
-										</a>
+									<figure class="image is5by4">										
+									 	<img src="./icons/python_man_2.webp"/>										
 									</figure>              
 								</div>
 								<div class="card-content is-overlay">
      								   <span class="title is-3 has-text-white">Being Python Mane #1</span>
                                                                 </div>
+							    </a>		
 							<!-- text is here -->
 							</div> <!-- /card -->                   
 						</div><!-- /a book -->       
@@ -65,16 +65,16 @@ body {
 						<div class="column "><!-- a book -->
 							<!-- C for Beginners -->
 							<div class="card shadow book-cover">
+								<a href="./c_language_1/">											
 								<div class="card-image ">
-									<figure class="image is-5by4">
-										<a href="./c_language_1/">											
-											<img src="https://images-assets.nasa.gov/image/carina_nebula/carina_nebula~medium.jpg"/>
-										</a>
+									<figure class="image is-5by4">										
+										<img src="https://images-assets.nasa.gov/image/carina_nebula/carina_nebula~medium.jpg"/>										
 									</figure>  
 								</div>
 								<div class="card-content is-overlay">
      								   <span class="title is-3 has-text-white">C for Beginners</span>
                                                                 </div>
+								</a>		
 							<!-- text is here -->
 							</div> <!-- /card -->                   
 						</div><!-- /a book -->       
