--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@ body {
 									</figure>              
 								</div>
 								<div class="card-content is-overlay">
-     								   <span class="title is-4 has-text-blue">Being Python Man <br/> Part 1</span>
+     								   <span class="title is-4 has-text-green">Being Python Man</span>
+								   <span class="title is-4 has-text-green">Part 1</span>
                                                                 </div>
 							    </a>		
 							<!-- text is here -->
@@ -73,6 +74,7 @@ body {
 								</div>
 								<div class="card-content is-overlay">
      								   <span class="title is-3 has-text-white">C for Beginners</span>
+									
                                                                 </div>
 								</a>		
 							<!-- text is here -->
