--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body {
 								<a href="./beingpythonman_1/">
 								<div class="card-image">
 									<figure class="image is5by4">										
-									 	<img src="./icons/python_man_2.webp"/>										
+									 	<img src="./icons/python_man_2.png"/>										
 									</figure>              
 								</div>
 								<div class="card-content is-overlay">
