--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@ body {
 									</figure>              
 								</div>
 								<div class="card-content is-overlay">
-     								   <span class="title is-4 has-text-green">Being Python Man</span>
-								   <span class="title is-4 has-text-green">Part 1</span>
+     								   <span class="title is-5 has-text-link-dark">Being Python Man Part 1</span>
+								   
                                                                 </div>
 							    </a>		
 							<!-- text is here -->
