--- a/c_language_1/index.html
+++ b/c_language_1/index.html
@@ -43,7 +43,7 @@
 							<font color="#fff">รู้จักกับ C programming language</font></a></li>
 						
 						<li class="list-item "><a  href="chapter2.html" >
-							<font color="#fff">รู้จัก Pointer, Array และ Strings</font></a></li>
+							<font color="#fff">รู้จัก Derived Data Type</font></a></li>
 							
 					</ul>			
 				</div>
