--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ body {
 					<div class="columns">						
 						<div class="column"><!-- a book -->
 							<!-- being python man # 1 -->
-							<div class="card shadow book-cover hvr-bob">
+							<div class="card shadow book-cover">
 								<a href="./beingpythonman_1/">
 								<div class="card-image">
 									<figure class="image is5by4">										
