--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ body {
 						<!-- ############################# --> 
 						<div class="column "><!-- a book -->
 							<!-- C for Beginners -->
-							<div class="card shadow book-cover hvr-bob">
+							<div class="card shadow book-cover">
 								<a href="./c_language_1/">											
 								<div class="card-image ">
 									<figure class="image is-5by4">										
