--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ body {
 				<div class="column"><!-- margin left -->	</div>
 				<div class="column is-two-thirds"> <!-- books -->
 					<div class="columns">						
-						<div class="column"><!-- a book -->
+						<div class="column "><!-- a book -->
 							<!-- being python man # 1 -->
 							<div class="card shadow book-cover">
 								<a href="./beingpythonman_1/">
@@ -135,7 +135,7 @@ body {
 							</div> <!-- /card -->                   
 						</div><!-- /a book -->       
 						<!-- ############################# --> 
-						<div class="column "><!-- a book -->
+						<div class="column hvr-bob "><!-- a book -->
 							<!-- C for Beginners -->
 							<div class="card shadow book-cover">
 								<a href="./c_language_1/">											
