--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ body {
 					<div class="columns">						
 						<div class="column "><!-- a book -->
 							<!-- being python man # 1 -->
-							<div class="card shadow book-cover">
+							<div class="card shadow book-cover hvr-bob ">
 								<a href="./beingpythonman_1/">
 								<div class="card-image">
 									<figure class="image is5by4">										
@@ -135,9 +135,9 @@ body {
 							</div> <!-- /card -->                   
 						</div><!-- /a book -->       
 						<!-- ############################# --> 
-						<div class="column hvr-bob "><!-- a book -->
+						<div class="column"><!-- a book -->
 							<!-- C for Beginners -->
-							<div class="card shadow book-cover">
+							<div class="card shadow book-cover hvr-bob ">
 								<a href="./c_language_1/">											
 								<div class="card-image ">
 									<figure class="image is-5by4">										
