--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ body {
 </script>
 <!-- ############  analytic ########### -->	  
   </head>
-  <body class="bg-books">
+  <body class="bg-mine-1">
 	  <!-- Hero -->
       <section class="hero is-light">
         <div class="hero-body">
