--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ body {
 									</figure>  
 								</div>
 								<div class="card-content is-overlay">
-     								   <span class="title is-3 has-text-white">C for Beginners</span>
+     								   <span class="title is-3 has-text-info">C for Beginners</span>
 									
                                                                 </div>
 								</a>		
