--- a/index.html
+++ b/index.html
@@ -104,6 +104,25 @@ body {
     
     <br/>
     <!-- The footer holds our remix button — you can use it for structure or cut it out ✂ -->
+<div class="ss-footer">
+	<div class="columns">
+		<div class="column"></div>
+		<div class="column">
+			<div class="content has-text-centered">
+				<p>
+					<strong></strong> By <a href="mailto:somchaisomph@gmail.com">สมชาย สมผดุง</a>. 
+				</p>
+				<p>
+					The source code is licensed
+					<a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
+					is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+				</p>
+			</div>
+		</div>
+		<div class="column"></div>
+	   </div>
+</div>	
+	  <!--
    <footer class="footer ">
 	   <div class="columns">
 		<div class="column"></div>
@@ -123,6 +142,7 @@ body {
 	   </div>
 		
   </footer>
+-->
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   </body>
