--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ body {
 </script>
 <!-- ############  analytic ########### -->	  
   </head>
-  <body class="bg-mine-1">
+  <body class="ss-main-bg">
 	  <!-- Hero -->
       <section class="hero is-light">
         <div class="hero-body">
