--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
   -->
   <link rel="stylesheet" href="../css/my_css.css" />
   <style>  
+	  
 body {
-  background-color: lch(93% 44 255);
+   height: 100%;
+  /*background-color: lch(93% 44 255);*/
 }	  
-  .shadow {
+ .shadow {
 	  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
 	  <style>
@@ -36,19 +38,19 @@ body {
   </head>
   <body class="ss-main-bg">
 	  <!-- Hero -->
-      <section class="hero is-light">
+      <section class="hero is-light is-small">
         <div class="hero-body">
           <p class="title is-1  has-text-centered">
             SS EBooks 
           </p>
-          <p class="title is-3 has-text-centered" >
+          <p class="title is-4 has-text-centered" >
             Learn every day
           </p>
         </div>
       </section>
       <!-- /Hero -->  
       <!-- book shelf -->
-		<div class="container is-fluid ">
+		<div class="container">
 			<div class="columns is-multiline is-centered"><!-- row 1-->
 				<div class="column"><!-- margin left -->	</div>
 				<div class="column is-two-thirds"> <!-- books -->
