--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@ html,body {
   background-repeat: no-repeat;
   background-size: cover;
 }
+.container, .hero{
+	background:transparent;
+	
+}
   </style>
   
 <!-- ############  analytic ########### -->
