--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@ html,body {
   background-repeat: no-repeat;
   background-size: cover;
 }
-.container, .hero{
-	background:transparent;
-	
-}
+.container{background:transparent;}
+.hero{background-color: rgba(230,230,230,0.4);}
   </style>
   
 <!-- ############  analytic ########### -->
