--- a/index.html
+++ b/index.html
@@ -69,11 +69,12 @@ html,body {
 								<a href="./beingpythonman_1/">
 								<div class="card-image">
 									<figure class="image is5by4">										
-									 	<img src="./icons/python_man_2.png"/>										
+									 	<img src="./beingpythonman_1/img/fibonacci_stone_python.png"/>										
 									</figure>              
 								</div>
-								<div class="card-content is-overlay">
-     								   <span class="title is-5 has-text-link-dark">Being Python Man Part 1</span>
+								<div class="card-content is-overlay has-text-centered ">
+     								   <span class="title is-4 has-text-warning">
+									   Being Python Man <br/>Part 1</span>
 								   
                                                                 </div>
 							    </a>		
