--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ html,body {
 							<div class="card shadow book-cover">
 								<a href="./beingpythonman_1/">
 								<div class="card-image">
-									<figure class="image is5by4">										
+									<figure class="image is-1by1">										
 									 	<img src="./beingpythonman_1/img/fibonacci_stone_python.png"/>										
 									</figure>              
 								</div>
@@ -87,12 +87,12 @@ html,body {
 							<div class="card shadow book-cover">
 								<a href="./c_language_1/">											
 								<div class="card-image ">
-									<figure class="image is-5by4">										
+									<figure class="image is-1by1">										
 										<img src="./c_language_1/img/C_1_cover.png"/>										
 									</figure>  
 								</div>
-								<div class="card-content is-overlay">
-     								   <span class="title is-3 has-text-info">C for Beginners</span>
+								<div class="card-content is-overlay has-text-centered">
+     								   <span class="title is-4 has-text-warning">C for Beginners</span>
 									
                                                                 </div>
 								</a>		
