--- a/bookshelf/index.html
+++ b/bookshelf/index.html
@@ -205,7 +205,7 @@
     © 2023 Copyright:
     <a
       class="text-neutral-800 dark:text-neutral-400"
-      href="https://tailwind-elements.com/"
+      href=""
       >Smarter Machine</a
     >
   </div>
