--- a/bookshelf/index.html
+++ b/bookshelf/index.html
@@ -123,7 +123,7 @@
   <div class="container pt-9">
     <div class="mb-9 flex justify-center">
 		<!-- Facebook -->
-      <a href="#!" class="mr-9 text-neutral-800 dark:text-neutral-200">
+      <a href="https://www.facebook.com/groups/rpi.th" class="mr-9 text-neutral-800 dark:text-neutral-200">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="h-4 w-4"
@@ -186,7 +186,7 @@
       </a>
       -->
       <!-- Git -->
-      <a href="#!" class="text-neutral-800 dark:text-neutral-200">
+      <a href="#" class="text-neutral-800 dark:text-neutral-200">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="h-4 w-4"
