--- a/let-code-cg-1/bookshelf.html
+++ b/let-code-cg-1/bookshelf.html
@@ -178,7 +178,7 @@
                     <main>
                         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
 <script>
-/*window.location="http://localhost:8000";*/
+window.location="../bookshelf/";
 </script>
 
                     </main>
